--- a/chunkyrender/world/index.html
+++ b/chunkyrender/world/index.html
@@ -15,6 +15,7 @@
 	</style>
 </head>
 <body>
+  <div onload="function();"></div>
 	<div id="rootDiv">
 	  <canvas id="renderCanvas"></canvas>
 	</div>
