--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <img src="comparison/lapis/lapis_pt.png" width=50% height=50%>
 
 
-<img src="comparison/water/water_v.png" width=50% height=50%>
-<img src="comparison/water/water_k.png" width=50% height=50%>
-<img src="comparison/water/water_s.png" width=50% height=50%>
-<img src="comparison/water/water_pt.png" width=50% height=50%>
+<img src="comparison/ice/ice_v.png" width=50% height=50%>
+<img src="comparison/ice/ice_k.png" width=50% height=50%>
+<img src="comparison/ice/ice_s.png" width=50% height=50%>
+<img src="comparison/ice/ice_pt.png" width=50% height=50%>
 
 
 <img src="comparison/solea/solea_v.png" width=50% height=50%>
