--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 </head>
 
 
+<img src="comparison/city/city_v.png" width=50% height=50%>
+<img src="comparison/city/city_k.png" width=50% height=50%>
+<img src="comparison/city/city_s.png" width=50% height=50%>
+<img src="comparison/city/city_pt.png" width=50% height=50%>
+
 <img src="comparison/lapis/lapis_v.png" width=50% height=50%>
 <img src="comparison/lapis/lapis_k.png" width=50% height=50%>
 <img src="comparison/lapis/lapis_s.png" width=50% height=50%>
